# syncall

./: .coveragerc  .gitignore  .gitmodules  .markdown-link-check.json  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  combinations.md  devbox.json  devbox.jsonc  flake.nix  gtasks-uncheck-all-items.py  implement-a-new-synchronization.md  justfile  notion_config.toml  pyproject.toml  readme-asana.md  readme-caldav.md  readme-clickup.md  readme-fs-gkeep.md  readme-gcal.md  readme-gkeep.md  readme-notion.md  readme-tw-asana.md  readme-tw-caldav.md  readme-tw-gcal.md  readme-tw-gkeep.md  readme-tw-gtasks.md  readme-tw-notion.md  requirements.txt  setup.py  tw_gcal_sync  tw_gcal_sync.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  coverage.yml  install-software.yml  linters.yml  release.yml  stale-issues-prs.yml  tests.yml
bootstrap/devbox/: login  login.fish  login.sh  setup-python-venv.sh
bootstrap/devbox/schema/: devbox-schema.json
bootstrap/just/: justfile-base
bootstrap/pre-commit/: check-devbox-activated.py
completions/bash/: fs_gkeep_sync.sh  tw_asana_sync.sh  tw_caldav_sync.sh  tw_gcal_sync.sh  tw_gkeep_sync.sh  tw_gtasks_sync.sh  tw_notion_sync.sh
completions/fish/: fs_gkeep_sync.fish  tw_asana_sync.fish  tw_caldav_sync.fish  tw_gcal_sync.fish  tw_gkeep_sync.fish  tw_gtasks_sync.fish  tw_notion_sync.fish
completions/zsh/: fs_gkeep_sync.sh  tw_asana_sync.sh  tw_caldav_sync.sh  tw_gcal_sync.sh  tw_gkeep_sync.sh  tw_gtasks_sync.sh  tw_notion_sync.sh
docs/: implement-a-new-synchronization.md  readme-fs-gkeep.md  readme-md-gtasks.md  readme-tw-asana.md  readme-tw-caldav.md  readme-tw-gcal.md  readme-tw-gkeep.md  readme-tw-gtasks.md  readme-tw-notion.md  taskwarrior-filtering.md  tw-filtering.md
hooks/: pre-commit  pre-commit.sh
scripts/: after_deploy.sh  check_style.py  check_style.sh  do_coverage.sh  generate-shell-completions.sh  install-taskwarrior.sh  poetry-install-all-extras.sh
syncall/: __init__.py  __version__.py  _version.py  aggregator.py  app_utils.py  cli.py  concrete_item.py  constants.py  exceptions.py  filesystem_gkeep_utils.py  pdb_cli_utils.py  side_helper.py  sync_side.py  tw_asana_utils.py  tw_caldav_utils.py  tw_cattr_utils.py  tw_gcal_utils.py  tw_gkeep_utils.py  tw_gtasks_utils.py  tw_notion_utils.py  tw_utils.py  types.py
syncall/asana/: __init__.py  asana_side.py  asana_task.py  utils.py
syncall/caldav/: caldav_side.py  caldav_utils.py
syncall/cattr/: cattr_side.py  cattr_task.py
syncall/filesystem/: filesystem_file.py  filesystem_side.py  markdown_task_item.py  markdown_tasks_side.py
syncall/google/: __init__.py  common.py  gcal_side.py  gkeep_note.py  gkeep_note_side.py  gkeep_side.py  gkeep_todo_item.py  gkeep_todo_side.py  google_side.py  gtasks_side.py
syncall/notion/: __init__.py  notion_side.py  notion_todo_block.py
syncall/res/: gcal_client_secret.json  gtasks_client_secret.json
syncall/scripts/: fs_gkeep_sync.py  md_gtasks_sync.py  tw_asana_sync.py  tw_caldav_sync.py  tw_cattr_sync.py  tw_gcal_sync.py  tw_gkeep_sync.py  tw_gtasks_sync.py  tw_notion_sync.py
syncall/taskwarrior/: taskw_duration.py  taskwarrior_side.py
taskw_gcal_sync/: GCalSide.py  GenericSide.py  PrefsManager.py  TWGCalAggregator.py  TaskWarriorSide.py  __init__.py  aggregator.py  clogger.py  gcal_side.py  gen_side.py  helpers.py  logger.py  tw_side.py  utils.py
taskw_gcal_sync/res/: gcal_client_secret.json
taskw_gcal_sync/scripts/: tw_gcal_sync.py  tw_gcal_sync.py.backup
taskwarrior_syncall/: __init__.py  aggregator.py  app_utils.py  caldav_side.py  cli.py  constants.py  gcal_side.py  notion_side.py  notion_todo_block.py  side_helper.py  sync_side.py  taskwarrior_side.py  tw_asana_utils.py  tw_caldav_utils.py  tw_gcal_utils.py  tw_gkeep_utils.py  tw_notion_utils.py  types.py  utils.py
taskwarrior_syncall/asana/: asana_side.py  asana_task.py
taskwarrior_syncall/google/: gcal_side.py  gkeep_todo_item.py  gkeep_todo_side.py  google_side.py
taskwarrior_syncall/scripts/: tw_asana_sync.py  tw_caldav_sync.py  tw_gcal_sync.py  tw_gkeep_sync.py  tw_notion_sync.py
test/: GenericTestCase.py  conftest.py  conftest_notion.py  conftest_tw.py  run_doctests.sh  test_notion.py  test_tw_gcal_conversions.py  test_util_methods.py
test/test_data/: sample_items.yaml
test/test_tasks/: completed.data
tests/: conftest.py  conftest_fs.py  conftest_gcal.py  conftest_gkeep.py  conftest_gtasks.py  conftest_helpers.py  conftest_notion.py  conftest_tw.py  generic_test_case.py  pyproject.toml  test.taskrc  test_aggregator.py  test_app_utils.py  test_asana_task.py  test_filesystem_file.py  test_filesystem_gkeep.py  test_filesystem_side.py  test_gcal.py  test_gkeep.py  test_google_common.py  test_notion_todo_block.py  test_tw_asana_conversions.py  test_tw_caldav_conversions.py  test_tw_gcal.py  test_tw_gcal_conversions.py  test_tw_gkeep.py  test_tw_gtasks_conversions.py  test_tw_notion.py  test_util_methods.py
tests/test_data/: sample_items.yaml
tests/test_tasks/: backlog.data  pending.data  undo.data
