[tool.poetry]
name = "syncall"
version = "0.0.0"
description = "Versatile bi-directional synchronization tool"
license = "MIT"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bergercookie/syncall"
repository = "https://github.com/bergercookie/syncall"
include = ["syncall/py.typed", "completions/*"]
classifiers = [
  "Framework :: Pytest",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: Unix",
  "Topic :: Utilities",
]
keywords = [
  "asana",
  "calendar",
  "gkeep",
  "google calendar",
  "google keep",
  "google tasks",
  "google",
  "notion",
  "productivity",
  "synchronization",
  "task management",
  "taskwarrior",
  "caldav",
]

[tool.poetry.scripts]
tw_asana_sync = "syncall.scripts.tw_asana_sync:main"
tw_gcal_sync = "syncall.scripts.tw_gcal_sync:main"
tw_gkeep_sync = "syncall.scripts.tw_gkeep_sync:main"
tw_notion_sync = "syncall.scripts.tw_notion_sync:main"
fs_gkeep_sync = "syncall.scripts.fs_gkeep_sync:main"
tw_caldav_sync = "syncall.scripts.tw_caldav_sync:main"
tw_gtasks_sync = "syncall.scripts.tw_gtasks_sync:main"

# end-user dependencies --------------------------------------------------------
[tool.poetry.dependencies]
python = ">=3.8.1,<=3.12.5"

PyYAML = "~5.3.1"
bidict = "^0.21.4"
click = "^8.1.7"

google-api-python-client = { version = "^2.140.0", optional = true }
google-auth-oauthlib = { version = "^0.4.6", optional = true }
notion-client = { version = "^0.7.1", optional = true }
gkeepapi = [
  { version = "^0.13.7", optional = true, python = "<3.12" },
  { version = "^0.16.0", optional = true, python = ">3.12" },
]
asana = { version = "^1.0.0", optional = true }
caldav = { version = "^0.11.0", optional = true }
icalendar = { version = "^5.0.13", optional = true }
taskw-ng = { version = "0.2.7", optional = true }
xattr = { version = "^0.9.9", optional = true }
xdg = { version = "^6.0.0", optional = true }

loguru = "^0.5.3"
python-dateutil = "^2.9.0.post0"
rfc3339 = "^6.2"
item-synchronizer = "^1.1.5"
bubop = { version = "0.1.12", allow-prereleases = true }
setuptools = { version = "^72.1.0", optional = true, python = ">=3.12" }

[tool.poetry.extras]
google = ["google-api-python-client", "google-auth-oauthlib", "setuptools"]
gkeep = ["gkeepapi"]
notion = ["notion-client"]
asana = ["asana"]
caldav = ["caldav", "icalendar"]
tw = ["taskw-ng", "xdg"]
fs = ["xattr"]

# dev dependencies -------------------------------------------------------------
[tool.poetry.dev-dependencies]
black = { version = "22.3.0", allow-prereleases = true }
identify = "^2.6.0"
isort = "^5.13.2"
mock = "*"
mypy = "*"
pre-commit = "^2.21.0"
pyfakefs = [
  { version = "^4.7.0", python = "<3.12" },
  { version = "^5.4", python = ">3.12" },
]
pylint = "^2.17.7"
pyright = "*"
pytest = "*"
types-PyYAML = "^5.4.12"
types-setuptools = "^57.4.18"
google-api-python-client-stubs = "^1.26.0"
coverage = { version = "^6.5.0", extras = ["toml"] }
coveralls = "^3.3.1"
check-jsonschema = "^0.14.3"
# readline = "6.2.4.1"
ruff = "^0.5"
pyupgrade = "3.16"

# isort ------------------------------------------------------------------------
[tool.isort]
include_trailing_comma = true
line_length = 95
multi_line_output = 3
profile = "black"

# black ------------------------------------------------------------------------
[tool.black]
preview = true
line-length = 95
target-version = ['py38', 'py39']
include = '\.pyi?$'

# mypy -------------------------------------------------------------------------
[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "tqdm",
  "pytest",
  "pexpect",
  "notion_client",
  "google.auth.transport.requests",
  "google_auth_oauthlib.flow",
]
ignore_missing_imports = true

# pylint -----------------------------------------------------------------------
[tool.pylint]
[tool.pylint.master]
persistent = "yes"
suggestion-mode = "yes"
unsafe-load-any-extension = "no"
ignore = "VCS"

[tool.pylint.messages_control]
disable = "C0330,C0326,C0103,W0613,R0201,R1720,R1705,W0104,C0301"

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = "sys.exit,argparse.parse_error"

[tool.pylint.similarities]
ignore-comments = "yes"
ignore-docstrings = "no"
ignore-imports = "yes"
# ignore-signatures=no
min-similarity-lines = 4

[tool.pylint.format]
max-line-length = 95
ignore-invalid-name = true
max-module-lines = 500

[tool.pylint.string]
check-quote-consistency = "yes"

# pyright ----------------------------------------------------------------------
[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
pythonPlatform = "Linux"

# ruff -------------------------------------------------------------------------
[tool.ruff]
line-length = 95
target-version = "py38"
force-exclude = true

exclude = []

[tool.ruff.lint]

select = ["ALL"]
ignore = [
  "ANN201",
  "S101",
  "D102",
  "D103",
  "ANN001",
  "ANN202",
  "D100",
  "FBT001",
  "ANN003",
  "PGH003",
  "N803",
  "FBT002",
  "FA100",
  "TRY003",
  "SLF001",
  "EM102",
  "D105",
  "D107",
  "D213",
  "D203",
  "EM101",
  "D205",
  "D400",
  "D415",
  "INP001",
  "E501",
  "SIM118",
  "N806",
  "ANN002",
  "ANN204",
  "N802",
  "PLR0913",
  "ANN206",
]
exclude = []

[tool.ruff.lint.flake8-annotations]
# No need for -> None in __init__ methods
mypy-init-return = true

# coverage.py ------------------------------------------------------------------
[tool.coverage]
[tool.coverage.run]
omit = [
  "quickstart.py",
  "quickstart_gkeep.py",
  "a.py",
  "*/.pdbrc.py",
  "tests/*",
]

# pytest -----------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = ["--ignore-glob=quickstart*", "--doctest-modules"]

# build-system -----------------------------------------------------------------
[tool.poetry-dynamic-versioning]
enable = true
metadata = false
dirty = false
style = "pep440"

[tool.poetry-dynamic-versioning.files."syncall/__version__.py"]
persistent-substitution = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

# vim: tw=80
