[project]
name = "syncall"
dynamic = ["version", "readme"]
description = "Versatile bi-directional synchronization tool"
license = "MIT"
authors = [{ name = "Nikos Koukis", email = "nickkouk@gmail.com" }]
requires-python = ">=3.11,<4"
classifiers = [
  "Framework :: Pytest",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Environment :: Console",
  "Operating System :: Unix",
  "Topic :: Utilities",
]
keywords = [
  "asana",
  "calendar",
  "gkeep",
  "google calendar",
  "google keep",
  "google tasks",
  "google",
  "notion",
  "productivity",
  "synchronization",
  "task management",
  "taskwarrior",
  "caldav",
]
dependencies = [
  "PyYAML~=5.3.1",
  "bidict>=0.21.4,<0.22",
  "click>=8.1.7,<9",
  "loguru>=0.5.3,<0.6",
  "python-dateutil>=2.9.0.post0,<3",
  "rfc3339>=6.2,<7",
  "item-synchronizer>=1.1.5,<2",
  "bubop==0.1.12",
]

[project.optional-dependencies]
google = [
  "google-api-python-client>=2.140.0,<3",
  "google-auth-oauthlib>=0.4.6,<0.5",
]
gkeep = ["gkeepapi>=0.17.1,<0.18"]
notion = ["notion-client>=0.7.1,<0.8"]
asana = ["asana>=1.0.0,<2"]
caldav = ["caldav>=0.11.0,<0.12", "icalendar>=5.0.13,<6"]
tw = ["taskw-ng==0.2.7", "xdg>=6.0.0,<7"]
fs = ["xattr>=1.1.0,<2"]

[project.scripts]
tw_asana_sync = "syncall.scripts.tw_asana_sync:main"
tw_gcal_sync = "syncall.scripts.tw_gcal_sync:main"
tw_gkeep_sync = "syncall.scripts.tw_gkeep_sync:main"
tw_notion_sync = "syncall.scripts.tw_notion_sync:main"
fs_gkeep_sync = "syncall.scripts.fs_gkeep_sync:main"
tw_caldav_sync = "syncall.scripts.tw_caldav_sync:main"
tw_gtasks_sync = "syncall.scripts.tw_gtasks_sync:main"

[project.urls]
Homepage = "https://github.com/bergercookie/syncall"
Repository = "https://github.com/bergercookie/syncall"

[tool.setuptools.packages.find]
include = ["syncall*"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools_scm]
version_file = "syncall/__version__.py"

# dependency groups ------------------------------------------------------------
[dependency-groups]
dev = [
  "identify",
  "isort",
  "mock",
  "mypy",
  "pre-commit",
  "pyfakefs",
  "pylint",
  "pyright",
  "pytest",
  "types-PyYAML",
  "types-setuptools",
  "google-api-python-client-stubs",
  "coverage",
  "coveralls",
  "check-jsonschema",
  "ruff",
  "pyupgrade",
]

# isort ------------------------------------------------------------------------
[tool.isort]
include_trailing_comma = true
line_length = 95
multi_line_output = 3


# mypy -------------------------------------------------------------------------
[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "tqdm",
  "pytest",
  "pexpect",
  "notion_client",
  "google.auth.transport.requests",
  "google_auth_oauthlib.flow",
]
ignore_missing_imports = true

# pylint -----------------------------------------------------------------------
[tool.pylint]
[tool.pylint.master]
persistent = "yes"
suggestion-mode = "yes"
unsafe-load-any-extension = "no"
ignore = "VCS"

[tool.pylint.messages_control]
disable = "C0330,C0326,C0103,W0613,R0201,R1720,R1705,W0104,C0301"

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = "sys.exit,argparse.parse_error"

[tool.pylint.similarities]
ignore-comments = "yes"
ignore-docstrings = "no"
ignore-imports = "yes"
# ignore-signatures=no
min-similarity-lines = 4

[tool.pylint.format]
max-line-length = 95
ignore-invalid-name = true
max-module-lines = 500

[tool.pylint.string]
check-quote-consistency = "yes"

# pyright ----------------------------------------------------------------------
[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"

# ruff -------------------------------------------------------------------------
[tool.ruff]
line-length = 95
target-version = "py311"
force-exclude = true

exclude = []

[tool.ruff.lint]

select = ["ALL"]
ignore = [
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "ANN204",
  "ANN206",
  "D100",
  "D102",
  "D103",
  "D105",
  "D107",
  "D203",
  "D205",
  "D213",
  "D400",
  "D415",
  "E501",
  "EM101",
  "EM102",
  "FA100",
  "FBT001",
  "FBT002",
  "INP001",
  "N802",
  "N803",
  "N806",
  "PGH003",
  "PLR0913",
  "S101",
  "SIM118",
  "SLF001",
  "TRY003",
  "COM812",
]
exclude = []

[tool.ruff.lint.flake8-annotations]
# No need for -> None in __init__ methods
mypy-init-return = true

# coverage.py ------------------------------------------------------------------
[tool.coverage]
[tool.coverage.run]
omit = [
  "quickstart.py",
  "quickstart_gkeep.py",
  "a.py",
  "*/.pdbrc.py",
  "tests/*",
]

# pytest -----------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = ["--ignore-glob=quickstart*", "--doctest-modules"]

# build-system -----------------------------------------------------------------
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm[toml]>=6.2,<10"]

# vim: tw=80
